ディレクトリ構成を改善、cloudflare側でのエラーを改善したい

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -63,12 +63,12 @@ export async function getStaticPaths() {
                     </a>
                 </div>
                 <div class="header-right">
-                    <div class="header-sentence"><i class="fas fa-pen-nib"></i> Blogs</div>
+                    <div class="\header-sentence"><i class="fas fa-pen-nib"></i> Blogs</div>
                     <a href="/" class="header-icon-link share" aria-label="共有"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
         </header>
-        
+
         <main>
             <div class="blog-section-container">
                 <div class="view-blog-left-box">
