--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ const hasMorePosts = posts.length > 6;
                 </div>
                 <div class="profile-cards-container">
                     <!-- 作成したコンポーネントを呼び出し、propsを渡す -->
-                    <ProfileCard text="関西在住" iconClass="fa-solid fa-location-dot" />
+                    <ProfileCard text="関西在住" iconClass="fa-solid fa-address-card" />
                     <ProfileCard text="応用情報技術者試験合格" iconClass="fa-solid fa-trophy" />
                     <ProfileCard text="情報工学系の学部3年生" iconClass="fa-solid fa-graduation-cap" />
                     <ProfileCard text="コーヒーがないと不健康になります" iconClass="fa-solid fa-heart" />
