--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -7,7 +7,7 @@ const allProfileCards = [
   { text: '応用情報技術者試験(IPA)合格', iconClass: 'fa-solid fa-trophy' },
   { text: '基本情報技術者試験(IPA)合格', iconClass: 'fa-solid fa-trophy' },
   { text: 'ITパスポート試験(IPA)合格', iconClass: 'fa-solid fa-trophy' },
-  { text: '情報工学系の学部3年生', iconClass: 'fa-solid fa-graduation-cap' },
+  { text: '情報工学系の学部3年生', iconClass: 'fa-solid fa-address-card' },
   { text: 'コーヒーがないと不健康になります', iconClass: 'fa-solid fa-heart' },
   { text: 'ネットワーク、機械学習分野について勉強中', iconClass: 'fa-solid fa-graduation-cap' },
   { text: '個人サイトを鋭意制作中', iconClass: 'fa-solid fa-graduation-cap' },
